# FlowDesk

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  bm25_index.pkl  cloudbuild.yaml  config.py  pyproject.toml  start.sh  support_platform.db  support_platform_checkpoints.db-shm  support_platform_checkpoints.db-wal
.github/workflows/: ci-cd.yml
db/: __init__.py  checkpointer.py  models.py  session.py
db/migrations/: env.py
docs/: account_management.md  api_integration.md  billing_payments.md  contact_escalation.md  data_privacy_gdpr.md  faq.md  password_security.md  product_warranty.md  return_refund_policy.md  shipping_delivery.md  sla.md  subscription_plans.md  system_requirements.md  troubleshooting_desktop.md  troubleshooting_mobile.md
evaluation/: __init__.py  confidence_scorer.py  eval_harness.py  labeled_set.json
flowdesk-demo/: package-lock.json  package.json  tailwind.config.ts
flowdesk-demo/app/: globals.css  layout.tsx  page.tsx
flowdesk-demo/lib/: rateLimit.ts  types.ts  useStreamedChat.ts
gateway/: __init__.py  demo.py  main.py  streaming.py
infra/: __init__.py
orchestrator/: __init__.py  graph.py  models.py  run_conversations.py  state.py
orchestrator/agents/: __init__.py  rag_agent.py  (+3 more)
retrieval/: __init__.py  eval_retrieval.py  hybrid_retriever.py  ingest.py  reranker.py  utils.py
tests/: test_action_agent.py  test_escalation_agent.py  test_eval_retrieval.py  test_gateway.py  test_graph.py  test_hybrid_retriever.py  test_ingest.py  test_rag_agent.py  test_reranker.py  test_router.py  test_state.py
(+13 files in other folders)
